Fix table card text overflow issue

--- a/sass/components/_tableCard.scss
+++ b/sass/components/_tableCard.scss
@@ -17,18 +17,23 @@
     display: flex;
     justify-content: space-between;
     @include mobile {
-      width: 70%;      
+      width: 70%;
     }
 
     &__title {
       display: flex;
       flex-direction: column;
+      width: 100%;
 
       h3 {
+        width: 100%;
         align-self: flex-start;
         margin: 0;
         color: black;
         font-weight: 600;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
         @include rem(font-size, 20);
 
         &:hover {
@@ -49,6 +54,9 @@
       p {
         @include rem(font-size, 16);
         padding-bottom: 10px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     }
 
